--- a/p01.html
+++ b/p01.html
@@ -10,7 +10,7 @@
 <body>
   <h1>Multiples of 3 and 5 below 1000</h1>
   <h3>See console for results</h3>
-  <script type="text/javascript" src="main.js"></script>
+  <script type="text/javascript" src="p01.js"></script>
 </body>
 
 </html>
