--- a/p02.html
+++ b/p02.html
@@ -4,13 +4,13 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Multiples of 3 and 5</title>
+  <title>Even Fibonacci numbers</title>
 </head>
 
 <body>
-  <h1>Multiples of 3 and 5 below 1000</h1>
+  <h1>Even Fibonacci numbers less than 4,000,000</h1>
   <h3>See console for results</h3>
-  <script type="text/javascript" src="p01.js"></script>
+  <script type="text/javascript" src="p02.js"></script>
 </body>
 
 </html>
